--- a/docs/diagram/diagram.tex
+++ b/docs/diagram/diagram.tex
@@ -30,11 +30,12 @@
     at (0,0) (sss) {Shamir's Secret Sharing};
   \node[draw, above left=1cm and -6mm of sss] (secret) {\textbf{Secret}};
 
-  \node[draw, right=\spacing of sss] (ks3) {$\KS_3$};
-  \node[draw, above=\spacing of ks3] (ks2) {$\KS_2$};
-  \node[draw, above=\spacing of ks2] (ks1) {$\KS_1$};
-  \node[      below=\spacing of ks3] (kss) {$\ldots$};
-  \node[draw, below=\spacing of kss] (ksn) {$\KS_n$};
+  \node[draw, right=\spacing of sss] (ks3)     {$\KS_3$};
+  \node[draw, above=\spacing of ks3] (ks2)     {$\KS_2$};
+  \node[draw, above=\spacing of ks2] (ks1)     {$\KS_1$};
+  \node[      below=\spacing of ks3] (kss)     {$\ldots$};
+  \node[draw, below=\spacing of kss] (ksn)     {$\KS_n$};
+  \node[draw, below=\spacing of ksn] (esecret) {\E(Secret)};
 
   \draw [arrow] (secret) -- (sss);
   \begin{scope}[on background layer]
@@ -42,35 +43,36 @@
     \draw [arrow] (sss.center) to[out=east, in=west] (ks2.west);
     \draw [arrow] (sss.center) to[out=east, in=west] (ks3.west);
     \draw [arrow] (sss.center) to[out=east, in=west] (ksn.west);
+    \draw [arrow] (sss.center) to[out=-30,  in=west] (esecret);
   \end{scope}
 
-  \node[draw, right=\spacing of ks3] (eks3) {$\E(\pk_{\includegraphics[width=6pt]{mage.png}}, \KS_3)$};
-  \node[draw, right=\spacing of ks2] (eks2) {$\E(\pk_{\includegraphics[width=5pt]{supervillain.png}}, \KS_2)$};
-  \node[draw, right=\spacing of ks1] (eks1) {$\E(\pk_{\includegraphics[width=6pt]{farmer.png}}, \KS_1)$};
-  \node[      right=2cm of kss]      (ekss) {$\ldots$};
-  \node[draw, right=\spacing of ksn] (eksn) {$\E(\pk_{\includegraphics[width=6pt]{astronaut.png}}, \KS_n)$};
+  \node[draw, rounded rectangle, right=\spacing of ks3] (eks3) {$\E(\pk_{\includegraphics[width=6pt]{mage.png}}, \KS_3)$};
+  \node[draw, rounded rectangle, right=\spacing of ks2] (eks2) {$\E(\pk_{\includegraphics[width=5pt]{supervillain.png}}, \KS_2)$};
+  \node[draw, rounded rectangle, right=\spacing of ks1] (eks1) {$\E(\pk_{\includegraphics[width=6pt]{farmer.png}}, \KS_1)$};
+  \node[                         right=2cm of kss]      (ekss) {$\ldots$};
+  \node[draw, rounded rectangle, right=\spacing of ksn] (eksn) {$\E(\pk_{\includegraphics[width=6pt]{astronaut.png}}, \KS_n)$};
 
   \draw [arrow] (ks1) -- (eks1);
   \draw [arrow] (ks2) -- (eks2);
   \draw [arrow] (ks3) -- (eks3);
   \draw [arrow] (ksn) -- (eksn);
 
-  \node[right=1mm of eks1] (s1) {\includegraphics[width=1cm]{farmer.png}};
-  \node[right=1mm of eks2] (s2) {\includegraphics[width=9mm]{supervillain.png}};
-  \node[right=1mm of eks3] (s3) {\includegraphics[width=1cm]{mage.png}};
-  \node[right=1mm of eksn] (sn) {\includegraphics[width=1cm]{astronaut.png}};
+  \node[right=1mm of eks1]   (s1) {\includegraphics[width=1cm]{farmer.png}};
+  \node[right=2mm of eks2]   (s2) {\includegraphics[width=9mm]{supervillain.png}};
+  \node[right=1mm of eks3]   (s3) {\includegraphics[width=1cm]{mage.png}};
+  \node[right=0.5mm of eksn] (sn) {\includegraphics[width=1cm]{astronaut.png}};
 
   \node[rectangle, right=7mm of s3,
     minimum width=1cm, minimum height=7cm,
     fill=red!20, draw=red!50!black] (event) {};
   \node at (event) {\includegraphics[width=1cm]{hourglass.png}};
 
-  \node[draw, right=39mm of eks3] (dks3) {$\D(\sk_{\includegraphics[width=6pt]{mage.png}}, \KS_3)$};
+  \node[draw, rounded rectangle, right=39mm of eks3] (dks3) {$\D(\sk_{\includegraphics[width=6pt]{mage.png}}, \KS_3)$};
   % the super villain won't decrypt :^)
-  \node[      right=47mm of eks2] (dks2) {\includegraphics[width=5mm]{cross.png}};
-  \node[draw, right=39mm of eks1] (dks1) {$\D(\sk_{\includegraphics[width=6pt]{farmer.png}}, \KS_1)$};
-  \node[      right=56mm of ekss] (dkss) {$\ldots$};
-  \node[draw, right=39mm of eksn] (dksn) {$\D(\sk_{\includegraphics[width=6pt]{astronaut.png}}, \KS_n)$};
+  \node[      rounded rectangle, right=47mm of eks2] (dks2) {\includegraphics[width=5mm]{cross.png}};
+  \node[draw, rounded rectangle, right=39mm of eks1] (dks1) {$\D(\sk_{\includegraphics[width=6pt]{farmer.png}}, \KS_1)$};
+  \node[                         right=58mm of ekss] (dkss) {$\ldots$};
+  \node[draw, rounded rectangle, right=39mm of eksn] (dksn) {$\D(\sk_{\includegraphics[width=6pt]{astronaut.png}}, \KS_n)$};
 
   \tikzset{
     snekline/.style={decorate, decoration={snake,segment length=5mm,post length=1mm}}
@@ -91,8 +93,6 @@
   \draw [arrow] (dks3) to[out=0, in=180] (decryption);
   \draw [arrow] (dksn) to[out=0, in=190] (decryption);
 
-  \node[draw, below=of sn] (esecret) {\E(Secret)};
-  \draw[arrow, rounded corners=70pt] (sss.-75) |- (esecret);
   \draw[arrow, rounded corners=70pt] (esecret) -| (decryption.-140);
 
   \node[draw, below right=1cm and -1cm of decryption, text width=20mm, align=center]
